--- a/assets/minecraft/models/item/snowball.json
+++ b/assets/minecraft/models/item/snowball.json
@@ -2,5 +2,13 @@
   "parent": "minecraft:item/generated",
   "textures": {
     "layer0": "minecraft:item/snowball"
-  }
+  },
+
+  "overrides": [
+    {
+      "predicate": {
+        "custom_model_data": 12051090
+      }, "model": "item/wind_charge"
+    }
+  ]
 }
